--- a/index.html
+++ b/index.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Home</title>
+<head>
+    <title>An Overview of HTML</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <!--
-      Need a visual blank slate?
-      Remove all code in `styles.css`!
-    -->
     <link rel="stylesheet" href="styles.css" />
     <script type="module" src="script.js"></script>
-  </head>
-  <body>
+</head>
+<body>
     <nav>
-      <a href="/" aria-current="page">Home</a>
-      <a href="/page2.html">Other page</a>
+        <a href="index.html" aria-current="page">Home</a>
+        <a href="beginning.html">The Beginning of HTML</a>
+        <a href="text.html">The Formatting of Text</a>
+        <a href="tables.html">The Table of Tables</a>
+        <a href="hyperlinks.html">How to Hyperlink</a>
+        <a href="routing.html">The Confusion that is Routing</a>
+        <a href="photos.html">Inserting Photos</a>
+        <a href="conclusion.html">The Finale of HTML</a>
     </nav>
     <main>
-      <h1>Home page</h1>
-    </main>
-  </body>
+        <h1>An Overview of HTML</h1>
+        This website provides a basic overview of HTML, explaining its essential structure and key elements. It includes a series of pages that cover foundational topics, such as the importance of the document type declaration, text formatting, creating tables, and adding images, all aimed at helping users understand and work with HTML effectively.
+      </main>
+    <footer>
+        <a href="beginning.html">Next: The Beginning of HTML</a>
+    </footer>
+</body>
 </html>
